--- a/.github/workflows/main_bamf-gear.yml
+++ b/.github/workflows/main_bamf-gear.yml
@@ -2,58 +2,54 @@ name: Build and deploy Node.js app to Azure Web App - BAMF-GEAR
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js version
+      - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
+          node-version: 20
 
-      - name: Install & build React app
+      - name: Install and build
         run: |
           cd bamf-react
-          npm install
+          npm ci
           npm run build
 
-      - name: Upload artifact
+      - name: Upload Next.js build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: react-build
-          path: bamf-react/build
+          name: node-app
+          path: bamf-react/.next
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      id-token: write
-      contents: read
 
     steps:
-      - name: Download artifact
+      - name: Download build artifact
         uses: actions/download-artifact@v4
         with:
-          name: react-build
+          name: node-app
 
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_9118521F72CE422BBD73ACF28773BD5D }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_D6A40548620C47CEA2BA16E4E9EF3520 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_15F7C0B7CB8749E28F16A25E3534ADD3 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'BAMF-GEAR'
-          slot-name: 'Production'
+          app-name: "BAMF-GEAR"
+          slot-name: "Production"
           package: .
