Update GitHub Actions workflow with permissions
Added permissions for id-token and contents in workflow.

--- a/.github/workflows/main_bamf-gear.yml
+++ b/.github/workflows/main_bamf-gear.yml
@@ -5,7 +5,11 @@ on:
     branches:
       - main
   workflow_dispatch:
-
+  
+permissions:
+  id-token: write
+  contents: read
+  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -53,5 +57,6 @@ jobs:
           app-name: "BAMF-GEAR"
           slot-name: "Production"
           package: .
+
 
 
