--- a/.github/workflows/main_bamf-gear.yml
+++ b/.github/workflows/main_bamf-gear.yml
@@ -10,6 +10,7 @@ permissions:
   id-token: write
   contents: read
   
+# ... (lines before jobs: are unchanged)
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -26,13 +27,23 @@ jobs:
         run: |
           cd bamf-react
           npm ci
+          # The 'next build' command generates the standalone folder
           npm run build
+          
+          # --- NEW STEP: Move 'public' and 'static' files ---
+          # Standalone mode *only* includes server files. 
+          # You must manually copy the 'public' and static assets.
+          # Note: If you don't use 'public', you can skip the 'cp -r public' line.
+          cp -r public ./.next/standalone/public
+          cp -r .next/static ./.next/standalone/.next/static
+        working-directory: bamf-react # <-- Add working directory here
 
       - name: Upload Next.js build artifact
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: bamf-react
+          # --- CRITICAL CHANGE: Upload only the standalone directory ---
+          path: bamf-react/.next/standalone 
 
   deploy:
     runs-on: ubuntu-latest
@@ -43,8 +54,11 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
+          # The artifact will be downloaded to a directory named 'node-app'
+          path: deployment-package # <-- Download to a specific folder
 
       - name: Login to Azure
+        # ... (rest of Azure login is unchanged)
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
@@ -56,7 +70,5 @@ jobs:
         with:
           app-name: "BAMF-GEAR"
           slot-name: "Production"
-          package: .
-
-
-
+          # --- CRITICAL CHANGE: Point to the downloaded package ---
+          package: deployment-package # Path to the folder containing the standalone output
