--- a/.github/workflows/main_bamf-gear.yml
+++ b/.github/workflows/main_bamf-gear.yml
@@ -10,7 +10,6 @@ permissions:
   id-token: write
   contents: read
   
-# ... (lines before jobs: are unchanged)
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -27,23 +26,13 @@ jobs:
         run: |
           cd bamf-react
           npm ci
-          # The 'next build' command generates the standalone folder
           npm run build
-          
-          # --- NEW STEP: Move 'public' and 'static' files ---
-          # Standalone mode *only* includes server files. 
-          # You must manually copy the 'public' and static assets.
-          # Note: If you don't use 'public', you can skip the 'cp -r public' line.
-          cp -r public ./.next/standalone/public
-          cp -r .next/static ./.next/standalone/.next/static
-        working-directory: bamf-react # <-- Add working directory here
 
       - name: Upload Next.js build artifact
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          # --- CRITICAL CHANGE: Upload only the standalone directory ---
-          path: bamf-react/.next/standalone 
+          path: bamf-react
 
   deploy:
     runs-on: ubuntu-latest
@@ -54,11 +43,8 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
-          # The artifact will be downloaded to a directory named 'node-app'
-          path: deployment-package # <-- Download to a specific folder
 
       - name: Login to Azure
-        # ... (rest of Azure login is unchanged)
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
@@ -70,5 +56,4 @@ jobs:
         with:
           app-name: "BAMF-GEAR"
           slot-name: "Production"
-          # --- CRITICAL CHANGE: Point to the downloaded package ---
-          package: deployment-package # Path to the folder containing the standalone output
+          package: .
