Update build step to use standard webpack build
Override the build script to use standard webpack build instead of turbopack.

--- a/.github/workflows/main_bamf-gear.yml
+++ b/.github/workflows/main_bamf-gear.yml
@@ -26,8 +26,8 @@ jobs:
         working-directory: ./bamf-react
         run: |
           npm ci
-          # Build without turbopack for production (more stable for deployment)
-          npm run build -- --no-turbopack
+          # Override the build script to use standard webpack build
+          npx next build
 
       - name: Create deployment package
         working-directory: ./bamf-react
