--- a/.github/workflows/main_bamf-gear.yml
+++ b/.github/workflows/main_bamf-gear.yml
@@ -17,43 +17,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20.x'
-
-      - name: npm install and build
-        working-directory: ./bamf-react
+      - name: Zip artifact for deployment
         run: |
-          npm ci
-          # Override the build script to use standard webpack build
-          npx next build
-
-      - name: Create deployment package
-        working-directory: ./bamf-react
-        run: |
-          # Create a clean deployment directory
-          mkdir -p ../deploy
-          
-          # Copy necessary files
-          cp -r .next ../deploy/
-          cp -r node_modules ../deploy/
-          cp package.json ../deploy/
-          cp package-lock.json ../deploy/
-          
-          # Copy next.config if it exists
-          if [ -f next.config.js ]; then cp next.config.js ../deploy/; fi
-          if [ -f next.config.mjs ]; then cp next.config.mjs ../deploy/; fi
-          if [ -f next.config.ts ]; then cp next.config.ts ../deploy/; fi
-          
-          # Copy public folder if it exists
-          if [ -d public ]; then cp -r public ../deploy/; fi
+          cd bamf-react
+          zip -r ../release.zip . -x "*.git*" -x "node_modules/*" -x ".next/*"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: deploy/
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -64,7 +37,6 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
-          path: .
 
       - name: Login to Azure
         uses: azure/login@v2
@@ -79,4 +51,4 @@ jobs:
         with:
           app-name: 'BAMF-GEAR'
           slot-name: 'Production'
-          package: .
+          package: release.zip
