--- a/bamf-react/package.json
+++ b/bamf-react/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "build:turbo": "next build --turbopack",
-    "start": "next start",
+    "start": "next start -p ${PORT:-8080}",
     "lint": "biome check",
     "format": "biome format --write"
   },
