--- a/bamf-react/package.json
+++ b/bamf-react/package.json
@@ -11,6 +11,7 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@next/third-parties": "^16.0.3",
     "axios": "^1.12.2",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
