--- a/.github/workflows/main_bamf-react.yml
+++ b/.github/workflows/main_bamf-react.yml
@@ -16,27 +16,26 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Prepare deployment package
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          
+      - name: Install dependencies and build
         working-directory: ./bamf-react
         run: |
-          # Remove any existing build artifacts
-          rm -rf node_modules .next node_modules.tar.gz
+          npm ci
+          npm run build
           
-          # Create clean deployment directory
-          mkdir -p ../deploy
-          
-          # Copy all source files
-          cp -r . ../deploy/
-          
-          # Remove any artifacts that might have been copied
-          rm -rf ../deploy/node_modules ../deploy/.next ../deploy/node_modules.tar.gz
+          # Create tarball of node_modules for Azure
+          tar -czf node_modules.tar.gz node_modules
           
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: deploy/
-
+          path: bamf-react/
+          
   deploy:
     runs-on: ubuntu-latest
     needs: build
