--- a/.github/workflows/main_bamf-react.yml
+++ b/.github/workflows/main_bamf-react.yml
@@ -1,62 +1,65 @@
 name: Build and deploy Node.js app to Azure Web App - BAMF-REACT
+
 on:
   push:
     branches:
       - main
   workflow_dispatch:
-  
+
 permissions:
   id-token: write
   contents: read
-  
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Set up Node.js
+
+      - name: Set up Node.js version
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-          
-      - name: Install dependencies and build
+          cache: 'npm'
+          cache-dependency-path: './bamf-react/package-lock.json'
+
+      - name: npm install, build, and package
         working-directory: ./bamf-react
         run: |
           npm ci
-          npm run build
-          
-          # Create tarball of node_modules for Azure
+          npm run build --if-present
           tar -czf node_modules.tar.gz node_modules
-          
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
           path: bamf-react/
-          
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
-          path: .
-          
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
-          
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_YOURIDHERE }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_YOURIDHERE }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_YOURIDHERE }}
+
       - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
+        uses: azure/webapps-deploy@v3
         with:
           app-name: 'bamf-react'
           slot-name: 'Production'
