--- a/.github/workflows/main_bamf-react.yml
+++ b/.github/workflows/main_bamf-react.yml
@@ -28,8 +28,9 @@ jobs:
         working-directory: ./bamf-react
         run: |
           npm ci
-          npm run build --if-present
+          npm run build
           tar -czf node_modules.tar.gz node_modules
+          ls -lh node_modules.tar.gz
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
