--- a/.github/workflows/main_bamf-react.yml
+++ b/.github/workflows/main_bamf-react.yml
@@ -13,49 +13,59 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
-
+      
       - name: Set up Node.js version
         uses: actions/setup-node@v4
         with:
           node-version: "20.x"
           cache: "npm"
           cache-dependency-path: "./bamf-react/package-lock.json"
-
-      - name: npm install, build, and package
+      
+      - name: npm install and build
         working-directory: ./bamf-react
         run: |
           npm ci
-          npm run build
-
+          npm run build --if-present
+      
+      - name: Zip artifact for deployment
+        working-directory: ./bamf-react
+        run: zip -r ../release.zip .
+      
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: bamf-react
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
-
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
-
+      
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
+      
       - name: Login to Azure
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
-
-      - name: Deploy to Azure Web App
+      
+      - name: 'Deploy to Azure Web App'
+        id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: bamf-react
-          slot-name: Production
-          package: bamf-react
+          app-name: 'bamf-react'
+          slot-name: 'Production'
+          package: .
